--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ script:
   - dotnet build --configuration Release
   - cd ../Portal2Boards.Net.Test
   - dotnet restore
-  - dotnet build --configuration Release
+  - dotnet build --configuration Release /p:DefineConstants="AGG"
   - dotnet run --project Portal2Boards.Net.Test.csproj --configuration Release
