--- a/Portal2Boards.Net.Test/Portal2Boards.Net.Test.csproj
+++ b/Portal2Boards.Net.Test/Portal2Boards.Net.Test.csproj
@@ -7,6 +7,7 @@
     <Company />
     <Description>ok²</Description>
     <Copyright>Copyright © NeKz 2017</Copyright>
+    <Configurations>Debug</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
