--- a/Portal2Boards.Net/Portal2Boards.Net.csproj
+++ b/Portal2Boards.Net/Portal2Boards.Net.csproj
@@ -3,9 +3,17 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.2</TargetFramework>
     <Authors>NeKz</Authors>
-    <Description>ok</Description>
+    <Description>Retrieve Portal 2 challenge mode data from the speedrunning community board.iverb.me. Client includes automatic caching system and exception event for logging purposes.</Description>
     <Copyright>Copyright © NeKz 2017</Copyright>
     <Company />
+    <Version>1.1.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageProjectUrl>https://github.com/NeKzor/Portal2Boards.Net</PackageProjectUrl>
+    <RepositoryType />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
