--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: csharp
 mono: none
-dotnet: 1.0.4
+dotnet: 2.0.0
 dist: trusty
 solution: Portal2Boards.Net.sln
 script:
-  - cd Portal2Boards.Net/
+  - cd src/Portal2Boards.Net/
   - dotnet restore
   - dotnet build --configuration Release
-  - cd ../Portal2Boards.Net.Test
-  - dotnet restore
-  - dotnet build --configuration Release /p:DefineConstants="AGG"
-  - dotnet run --project Portal2Boards.Net.Test.csproj --configuration Release
+  #- cd ../Portal2Boards.Net.Test
+  #- dotnet restore
+  #- dotnet build --configuration Release /p:DefineConstants="AGG"
+  #- dotnet run --project Portal2Boards.Net.Test.csproj --configuration Release
