--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - cd src/Portal2Boards.Net/
   - dotnet restore
   - dotnet build --configuration Release
-  - cd src/Portal2Boards.Net.Test/
+  - cd ../Portal2Boards.Net.Test/
   - dotnet restore
   - dotnet build --configuration Release /p:DefineConstants="CHA"
   - dotnet run --project Portal2Boards.Net.Test.csproj --configuration Release
