--- a/src/Portal2Boards.Net/Portal2Boards.Net.csproj
+++ b/src/Portal2Boards.Net/Portal2Boards.Net.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>netstandard1.2</TargetFramework>
     <Authors>NeKz</Authors>
     <Description>Retrieve Portal 2 challenge mode data from the speedrunning community board.iverb.me. Client includes automatic caching system and exception event for logging purposes.</Description>
-    <Copyright>Copyright © NeKz 2017</Copyright>
+    <Copyright>Copyright © NeKz 2017-2018</Copyright>
     <Company />
-    <Version>2.0.0</Version>
+    <Version>2.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/NeKzor/Portal2Boards.Net</PackageProjectUrl>
     <RepositoryType />
