Example page for statistics

--- a/src/Portal2Boards.Net/Portal2Boards.Net.csproj
+++ b/src/Portal2Boards.Net/Portal2Boards.Net.csproj
@@ -7,7 +7,7 @@
     <Copyright>Copyright © NeKz 2017-2018</Copyright>
     <Company />
     <Version>2.1</Version>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/NeKzor/Portal2Boards.Net</PackageProjectUrl>
     <RepositoryType />
     <LangVersion>7.1</LangVersion>
