--- a/src/Portal2Boards.Net.Test/Portal2Boards.Net.Test.csproj
+++ b/src/Portal2Boards.Net.Test/Portal2Boards.Net.Test.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Portal2Boards.Net\Portal2Boards.Net.csproj" />
+	<PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
 
 </Project>
