--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ solution: Portal2Boards.Net.sln
 script:
   - dotnet restore
   - dotnet build src/Portal2Boards.Net/ -c Release
-  - dotnet build src/Portal2Boards.Net.Test/ -c Release /p:DefineConstants="WOS"
+  - dotnet build src/Portal2Boards.Net.Test/ -c Release /p:DefineConstants="PRO"
   - dotnet run -p src/Portal2Boards.Net.Test/ -c Release
