--- a/src/Portal2Boards.Net/Portal2Boards.Net.csproj
+++ b/src/Portal2Boards.Net/Portal2Boards.Net.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.2;netstandard1.3;netstandard2.0</TargetFrameworks>
     <Authors>NeKz</Authors>
-    <Description>Retrieve Portal 2 challenge mode data from the speedrunning community board.iverb.me. Client includes automatic caching system and exception event for logging purposes.</Description>
-    <Copyright>Copyright © NeKz 2017-2018</Copyright>
+    <Description>Retrieve Portal 2 challenge mode data from the speedrunning community board.portal2.sr. Client includes automatic caching system and exception event for logging purposes.</Description>
+    <Copyright>Copyright © NeKz 2017-2021</Copyright>
     <Version>2.2</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/NeKzor/Portal2Boards.Net</PackageProjectUrl>
